// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextContainer#calculateSpans(number) 1`] = `
Array [
  Span {
    "container": TextContainer {
      "exclusions": Array [],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 0,
    },
    "start": Point {
      "x": 0,
      "y": 0,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 30,
    },
    "start": Point {
      "x": 0,
      "y": 30,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 60,
    },
    "start": Point {
      "x": 0,
      "y": 60,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 90,
    },
    "start": Point {
      "x": 0,
      "y": 90,
    },
  },
]
`;

exports[`TextContainer#calculateSpans(number) 2`] = `Array []`;

exports[`TextContainer(exclusions)#calculateSpans(number) 1`] = `
Array [
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 0,
    },
    "start": Point {
      "x": 50,
      "y": 0,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 30,
    },
    "start": Point {
      "x": 50,
      "y": 30,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 60,
    },
    "start": Point {
      "x": 0,
      "y": 60,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 100,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 100,
      "y": 90,
    },
    "start": Point {
      "x": 0,
      "y": 90,
    },
  },
]
`;

exports[`TextContainer(exclusions)#calculateSpans(number) 2`] = `
Array [
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 99,
      "y": 0,
    },
    "start": Point {
      "x": 50,
      "y": 0,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 200,
      "y": 0,
    },
    "start": Point {
      "x": 150,
      "y": 0,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 99,
      "y": 30,
    },
    "start": Point {
      "x": 50,
      "y": 30,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 200,
      "y": 30,
    },
    "start": Point {
      "x": 150,
      "y": 30,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 200,
      "y": 60,
    },
    "start": Point {
      "x": 0,
      "y": 60,
    },
  },
  Span {
    "container": TextContainer {
      "exclusions": Array [
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 0,
          "y": 0,
        },
        BoxExclusion {
          "height": 50,
          "width": 50,
          "x": 100,
          "y": 0,
        },
      ],
      "height": 100,
      "spanY": 120,
      "spans": Array [],
      "width": 200,
      "x": 0,
      "y": 0,
    },
    "end": Point {
      "x": 200,
      "y": 90,
    },
    "start": Point {
      "x": 0,
      "y": 90,
    },
  },
]
`;
